<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_config"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_config"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_sync"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_qr"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
